# spice-streaming-agent

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile.am  NEWS  autogen.sh  configure.ac  meson.build  meson_options.txt  spice-streaming-agent.1  spice-streaming-agent.spec.in
.copr/: Makefile
build-aux/: meson-dist
include/spice-streaming-agent/: display-info.hpp  error.hpp  frame-capture.hpp  meson.build  plugin.hpp  x11-display-info.hpp
src/: Makefile.am  concrete-agent.cpp  concrete-agent.hpp  cursor-updater.cpp  cursor-updater.hpp  frame-log.hpp  gst-plugin.cpp  hexdump.h  jpeg.hpp  meson.build  mjpeg-fallback.hpp  spice-streaming-agent.cpp  stream-port.cpp  stream-port.hpp  utils.hpp  x11-display-info.cpp
src/unittests/: meson.build  spice-catch.hpp  xrandrlist.cpp
