option('gst-plugin',
       type : 'feature',
       value : 'enabled',
       description : 'Enable GStreamer based plugin')

option('unittests',
       type : 'feature',
       description : 'Enable tests (they require \'catch\' to be installed)')

option('udevrulesdir',
       type : 'string',
       description : 'udev rules.d directory')
